# macro_dashboard_backend

./: .gitignore  README.md  pyproject.toml
backend/fred/: fred_import.py
scratch/: fred_api_tests.ipynb
src/macro_dashboard/apps/ingest/: main.py
src/macro_dashboard/core/: settings.py
src/macro_dashboard/core/models/: Observations.py  Release.py  ReleaseDate.py  Series.py  SeriesRelease.py
src/macro_dashboard/sources/: fred.py
src/macro_dashboard/storage/postgres/repositories/: series_repository.py  tracked_series_repository.py
src/macro_dashboard_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
